Improvements for iOS support.

--- a/less/styles.less
+++ b/less/styles.less
@@ -49,3 +49,13 @@
 // Utility classes
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
+
+.spin{
+     -webkit-transform-origin: 50% 58%;
+     transform-origin:50% 58%;
+     -ms-transform-origin:50% 58%; /* IE 9 */
+     -webkit-animation: spin .2s infinite linear;
+     -moz-animation: spin .2s infinite linear;
+     -o-animation: spin .2s infinite linear;
+     animation: spin .2s infinite linear;
+}
